# raytracer21

./: .gitignore  CMakeLists.txt  README.md
image/: IImage.cpp  IImage.hpp  PPMImage.cpp
raytracer/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  IObject.hpp  Plain.hpp  Scene.hpp  Sphere.hpp  Vector3D.hpp  main.cpp
src/: main.cpp
src/image/: IImage.hpp  PPMImage.cpp  PPMImage.hpp
src/math3d/: Vector3D.hpp
src/raytracer/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Plain.hpp  Scene.hpp  Sky.hpp  Traceable.h  Traceable.hpp
src/raytracer/objects/: IObject.hpp  Plain.hpp  Sphere.hpp
src/raytracer/surfaces/: ISurface.hpp  Phong.hpp  Plain.hpp  Reflective.hpp
src/threadpool/: ThreadPool.cpp  ThreadPool.hpp
